--- a/documentation/SystemDesign/LowLevel/Design.tex
+++ b/documentation/SystemDesign/LowLevel/Design.tex
@@ -393,12 +393,12 @@ The shaft adapter is designed to fit snugly on the stepper motor shaft and provi
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/1.jpg}
-    \caption{one.}
+    \caption{Shaft Adapter Model}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/2.jpg}
-    \caption{two.}
+    \caption{Shaft Adapter Draft}
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -414,12 +414,12 @@ The components designed for the panning stage include an acrylic base plate, a r
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/3.jpg}
-    \caption{one.}
+    \caption{Panning Control Assembly}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/4.jpg}
-    \caption{two.}
+    \caption{Exploded Worm Attachment}
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -428,7 +428,7 @@ The components designed for the panning stage include an acrylic base plate, a r
 \begin{figure}[H]
    \centering
    \includegraphics[width=0.6\textwidth]{img/5.jpg} % requires the graphicx package
-   \caption{EXAMPLE}
+   \caption{Worm Gear Perimeter}
    \label{fig:hw5}
 \end{figure}
 
@@ -438,7 +438,7 @@ The spinning feeder cutout is fixed to the shaft of the stepper motor inside the
 \begin{figure}[H]
    \centering
    \includegraphics[width=0.3\textwidth]{img/6.jpg} % requires the graphicx package
-   \caption{EXAMPLE}
+   \caption{Feeder Cutout Draft}
    \label{fig:hw6}
 \end{figure}
 
@@ -448,7 +448,7 @@ The inner tube is designed to hold table tennis balls to be shot out by the shoo
 \begin{figure}[H]
    \centering
    \includegraphics[width=0.2\textwidth]{img/7.jpg} % requires the graphicx package
-   \caption{EXAMPLE}
+   \caption{Inner Tube Model}
    \label{fig:hw7}
 \end{figure}
 
@@ -462,17 +462,17 @@ A custom designed motor bracket is used to mount the DC motor onto the outer PVC
   \centering
   \begin{minipage}[b]{0.2\textwidth}
     \includegraphics[width=\textwidth]{img/8.jpg}
-    \caption{one.}
+    \caption{Motor Bracket Assembly}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.2\textwidth}
     \includegraphics[width=\textwidth]{img/9.jpg}
-    \caption{two.}
+    \caption{Outer Shaft}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.2\textwidth}
     \includegraphics[width=\textwidth]{img/10.jpg}
-    \caption{three.}
+    \caption{Shooter Assembly}
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -487,12 +487,12 @@ The roll control part will act as a manual control for the user to decide the ty
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/11.jpg}
-    \caption{one.}
+    \caption{Roll Control Model}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/12.jpg}
-    \caption{two.}
+    \caption{Roll Control Draft}
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -507,12 +507,12 @@ The base is made out of a hardwood and laser cut to an appropriate size. The bas
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/13.jpg}
-    \caption{one.}
+    \caption{Supports and Base}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/14.jpg}
-    \caption{two.}
+    \caption{Bucket Assembly}
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -527,12 +527,12 @@ The pitch control consists of a screw that pierces through the support beam and 
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/15.jpg}
-    \caption{one.}
+    \caption{Outside View Pitch Control}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/16.jpg}
-    \caption{two.}
+    \caption{Inside View Pitch Control}
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -549,12 +549,12 @@ A gear stepper motor (model 28BYJ48) with a driver is utilized for the automatic
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/17.jpg}
-    \caption{one.}
+    \caption{Gear Stepper Motor with Driver}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/18.jpg}
-    \caption{two.}
+    \caption{Japan Servo Stepper Motor}
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -569,12 +569,12 @@ For the ball shooter, a DC Motor purchased from Sayal Electronics and Hobbies is
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/19.jpg}
-    \caption{one.}
+    \caption{DC Motor}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/20.jpg}
-    \caption{two.}
+    \caption{Shooter Assembly}
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -582,6 +582,15 @@ For the ball shooter, a DC Motor purchased from Sayal Electronics and Hobbies is
 
 \subsubsection*{Arduino}
 Arduino UNO microcontroller is used to control all of the IPO (Input Process Output) processes between the sensors, actuators and Smart Serve. Arduino is chosen because it has a hardware platform setup and allows programming and serial communication over USB so designing so a PCB is not necessary. It is fast for our purposes, there is a lot of libraries available to use and lots of hardware modules designed for Arduino UNO. Also, this microcontroller easily interfaces with the hardware used in this prototype. 
+
+\subsection*{Full Assembly}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.75\textwidth]{img/21.jpg} %requires the graphicx package
+	\caption{Complete Hardware Assembly}
+\end{figure}
+
+
 
 \section{Appendix}
 
