--- a/documentation/SystemDesign/LowLevel/Design.tex
+++ b/documentation/SystemDesign/LowLevel/Design.tex
@@ -393,12 +393,12 @@ The shaft adapter is designed to fit snugly on the stepper motor shaft and provi
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/1.jpg}
-    \caption{one.}
+    \caption{Shaft Adapter 3D}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/2.jpg}
-    \caption{two.}
+    \caption{2D Engineering Drawing of Shaft Adapter}
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -414,12 +414,12 @@ The components designed for the panning stage include an acrylic base plate, a r
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/3.jpg}
-    \caption{one.}
+    \caption{Base Design and Assembly}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/4.jpg}
-    \caption{two.}
+    \caption{Worm Gear Coupler}
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -428,7 +428,7 @@ The components designed for the panning stage include an acrylic base plate, a r
 \begin{figure}[H]
    \centering
    \includegraphics[width=0.6\textwidth]{img/5.jpg} % requires the graphicx package
-   \caption{EXAMPLE}
+   \caption{Azimuth Stage Autodesk Inventor Design Accelerator Worm Gear Parameters}
    \label{fig:hw5}
 \end{figure}
 
@@ -438,7 +438,7 @@ The spinning feeder cutout is fixed to the shaft of the stepper motor inside the
 \begin{figure}[H]
    \centering
    \includegraphics[width=0.3\textwidth]{img/6.jpg} % requires the graphicx package
-   \caption{EXAMPLE}
+   \caption{Feeder Cutout from topview for laser cutting  }
    \label{fig:hw6}
 \end{figure}
 
@@ -448,7 +448,7 @@ The inner tube is designed to hold table tennis balls to be shot out by the shoo
 \begin{figure}[H]
    \centering
    \includegraphics[width=0.2\textwidth]{img/7.jpg} % requires the graphicx package
-   \caption{EXAMPLE}
+   \caption{CAD design of a Inner Tube }
    \label{fig:hw7}
 \end{figure}
 
@@ -462,17 +462,17 @@ A custom designed motor bracket is used to mount the DC motor onto the outer PVC
   \centering
   \begin{minipage}[b]{0.2\textwidth}
     \includegraphics[width=\textwidth]{img/8.jpg}
-    \caption{one.}
+    \caption{Motor Bracket}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.2\textwidth}
     \includegraphics[width=\textwidth]{img/9.jpg}
-    \caption{two.}
+    \caption{Outer Tube }
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.2\textwidth}
     \includegraphics[width=\textwidth]{img/10.jpg}
-    \caption{three.}
+    \caption{Motor with Motor Bracket attached to the Outer Tube }
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -487,12 +487,12 @@ The roll control part will act as a manual control for the user to decide the ty
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/11.jpg}
-    \caption{one.}
+    \caption{CAD design for Roll Control component }
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/12.jpg}
-    \caption{two.}
+    \caption{2D Engineering Drawing of Roll Control Component}
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -507,12 +507,12 @@ The base is made out of a hardwood and laser cut to an appropriate size. The bas
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/13.jpg}
-    \caption{one.}
+    \caption{Base with Support Brackets attached }
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/14.jpg}
-    \caption{two.}
+    \caption{Bucket with Inner Tune and Roll Control attached }
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -527,12 +527,12 @@ The pitch control consists of a screw that pierces through the support beam and 
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/15.jpg}
-    \caption{one.}
+    \caption{Pitch Control slots }
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/16.jpg}
-    \caption{two.}
+    \caption{Pitch Control Holding Pin from Inside }
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -549,12 +549,12 @@ A gear stepper motor (model 28BYJ48) with a driver is utilized for the automatic
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/17.jpg}
-    \caption{one.}
+    \caption{Gear Stepper Motor (Model 28BYJ48) with a Driver}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/18.jpg}
-    \caption{two.}
+    \caption{Stepper Motor 28BYJ48 Mounting Holes}
   \end{minipage}
 \end{figure}
 \end{minipage}
@@ -569,12 +569,12 @@ For the ball shooter, a DC Motor purchased from Sayal Electronics and Hobbies is
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/19.jpg}
-    \caption{one.}
+    \caption{MOTOR DC 3-6VOLTS 17000RPM 2MM SHAFT 20.72G/CM TORQUE}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{img/20.jpg}
-    \caption{two.}
+    \caption{DC Motor attached to the Motor Bracket onto the Outer Tube}
   \end{minipage}
 \end{figure}
 \end{minipage}
